syntax = "proto3";

package carefree.project.home.admin.home.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/carefree/api/project/home/admin/home/v1;home_proto";

service HomeAdmin {
  rpc CreateHome(CreateHomeRequest) returns (Home);
  rpc DeleteHome(DeleteHomeRequest) returns (google.protobuf.Empty);
  rpc GetHome(GetHomeRequest) returns (Home);
  rpc UpdateHome(UpdateHomeRequest) returns (Home);
}

// 命名空间的结构
message Home {
  // 资源名称
  // namespace/<id>/homes/<id>
  string name = 1;

  // home 名称
  string display_name = 2;

  // 创建时间
  google.protobuf.Timestamp create_time = 5;

  // 更新时间
  google.protobuf.Timestamp update_time = 6;
}

message CreateHomeRequest {
  // home ID
  //
  // 指定一个 ID，如果不指定则随机生成。
  string id = 1;
  Home home = 2;
}

message DeleteHomeRequest {
  // 资源名称
  // homes/<id>
  string name = 1;
}

message GetHomeRequest {
  // 资源名称
  // homes/<id>
  string name = 1;
}

message UpdateHomeRequest {
  Home home = 1;
}
